<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/share_post"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_title"
        style="@style/bottom_sheet_layout"
        android:hint="@string/title"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/edit_text_content"
        style="@style/bottom_sheet_layout"
        android:hint="@string/content"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/edit_text_group"
        style="@style/bottom_sheet_layout"
        android:hint="@string/group"
        android:inputType="number" />

    <EditText
        android:id="@+id/edit_text_user"
        style="@style/bottom_sheet_layout"
        android:hint="@string/user"
        android:inputType="number" />

    <Button
        android:id="@+id/button_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#036161"
        android:text="@string/share"
        android:textAllCaps="false" />

</LinearLayout>